# cmake-2016-jan-21-shared-lib-exe

./: CMakeLists.txt
A/: CMakeLists.txt  a.cpp  main.cpp
B/: CMakeLists.txt  b.cpp  b.hpp  main.cpp
X/: CMakeLists.txt  main.cpp
