CMAKE_MINIMUM_REQUIRED (VERSION 3.2)
PROJECT (A VERSION 1.0 LANGUAGES CXX)

##  Create a library
ADD_LIBRARY (A SHARED a.cpp a.hpp)
TARGET_INCLUDE_DIRECTORIES(A PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

##  Create the test executable
ADD_EXECUTABLE (A-test main.cpp)
TARGET_LINK_LIBRARIES (A-test A)

##  CTest
ENABLE_TESTING ()
ADD_TEST (NAME A-test COMMAND A-test)
